tests/fixtures/invalid/embedded_aggregate_array_element_pointer_field_type_mismatch.c
struct Node {
    int *cursor;
};

struct Box {
    struct Node nodes[1];
};

int main(void) {
    char bytes[1] = {'a'};
    struct Box box = {{{0}}};
    box.nodes[0].cursor = bytes;
    return 0;
}
